<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    android:background="@drawable/painting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ1"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sistine_chapel"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ1A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ1A1" />

                <RadioButton
                    android:id="@+id/paintingQ1A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ1A2" />

                <RadioButton
                    android:id="@+id/paintingQ1A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ1A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ1Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ2"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ2A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ2A1" />

                <RadioButton
                    android:id="@+id/paintingQ2A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ2A2" />

                <RadioButton
                    android:id="@+id/paintingQ2A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ2A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ2Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ3"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ3A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ3A1" />

                <RadioButton
                    android:id="@+id/paintingQ3A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ3A2" />

                <RadioButton
                    android:id="@+id/paintingQ3A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ3A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ3Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ4"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/madonna_dal_collo_lungo"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ4A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ4A1" />

                <RadioButton
                    android:id="@+id/paintingQ4A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ4A2" />

                <RadioButton
                    android:id="@+id/paintingQ4A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ4A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ4Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ5"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ5A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ5A1" />

                <RadioButton
                    android:id="@+id/paintingQ5A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ5A2" />

                <RadioButton
                    android:id="@+id/paintingQ5A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ5A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ5Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ6"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>


            <CheckBox
                android:id="@+id/paintingQ6A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ6A1" />

            <CheckBox
                android:id="@+id/paintingQ6A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ6A2" />

            <CheckBox
                android:id="@+id/paintingQ6A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ6A3" />

            <TextView
                android:id="@+id/paintingQ6Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ7"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ7A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ7A1" />

                <RadioButton
                    android:id="@+id/paintingQ7A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ7A2" />

                <RadioButton
                    android:id="@+id/paintingQ7A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ7A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ7Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ8"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arnolfini_portrait"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ8A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ8A1" />

                <RadioButton
                    android:id="@+id/paintingQ8A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ8A2" />

                <RadioButton
                    android:id="@+id/paintingQ8A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ8A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ8Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ9"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <RadioGroup
                android:id="@+id/paintingQ9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/paintingQ9A1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ9A1" />

                <RadioButton
                    android:id="@+id/paintingQ9A2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ9A2" />

                <RadioButton
                    android:id="@+id/paintingQ9A3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paintingQ9A3" />

            </RadioGroup>

            <TextView
                android:id="@+id/paintingQ9Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/questionBackground"
            android:padding="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paintingQ10"
                android:gravity="center"
                android:layout_marginBottom="@dimen/margin_8"/>

            <EditText
                android:id="@+id/paintingQ10A1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/paintingQ10A1"
                android:focusable="true"
                android:inputType="number"/>

            <TextView
                android:id="@+id/paintingQ10Verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_10">

            <Button
                android:id="@+id/submitAnswers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/submit_button"
                android:text="@string/submitAnswers"
                android:textColor="@color/textWhite"
                android:onClick="submitAnswers"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>